@@ -1,27 +1,30 @@
 package PetBase.service;
 
-import PetBase.dao.PetDAO;
+import PetBase.dao.Repository.PetRepository;
 import PetBase.dao.entity.Owner;
 import PetBase.dao.entity.Pet;
-import PetBase.service.dto.OwnerDTO;
-import PetBase.service.dto.PetDTO;
-import PetBase.service.mapping.OwnerMapper;
 import PetBase.service.mapping.PetMapper;
+import PetBase.service.dto.PetDTO;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class PetService {
-    private PetDAO petDAO;
 
-    public PetService() {
-        petDAO = new PetDAO();
+    private final PetRepository petRepository;
+
+    public Page<PetDTO> getPetsPaged(Pageable pageable) {
+        return petRepository.findAll(pageable)
+                .map(PetMapper::toDTO);
     }
 
-    public PetService(PetDAO petDAO) {
-        this.petDAO = petDAO;
+    @Autowired
+    public PetService(PetRepository petRepository) {
+        this.petRepository = petRepository;
     }
 
     public Pet createPet(String name, String birthDate, String breed, String color, Owner owner) {
@@ -31,41 +34,33 @@ public class PetService {
         pet.setBreed(breed);
         pet.setColor(color);
         pet.setOwner(owner);
-        return petDAO.save(pet);
+        return petRepository.save(pet);
     }
 
     public Pet getPetById(Long id) {
-        return petDAO.getById(id);
+        return petRepository.findById(id).orElse(null);
     }
 
     public void deletePetById(Long id) {
-        petDAO.deleteById(id);
-    }
-
-    public void deletePetByEntity(Pet pet) {
-        petDAO.deleteByEntity(pet);
-    }
-
-    public Pet updatePet(Pet updatedPet) {
-        return petDAO.update(updatedPet);
-    }
-
-    public void addFriendship(Long petId, Long friendId) {
-        Pet pet = petDAO.getById(petId);
-        Pet friend = petDAO.getById(friendId);
-        if (pet == null || friend == null) return;
-        if (!pet.getFriends().contains(friend)) {
-            pet.getFriends().add(friend);
-            friend.getFriends().add(pet);
-        }
-        petDAO.update(pet);
-        petDAO.update(friend);
+        petRepository.deleteById(id);
     }
 
     public List<PetDTO> getAllPets() {
-        return petDAO.getAll()
-                .stream()
+        return petRepository.findAll().stream()
                 .map(PetMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<Pet> filterPets(String color, String breed, String minDate) {
+        if (color != null && breed != null && minDate != null) {
+            return petRepository.findByColorIgnoreCaseAndBreedIgnoreCaseAndBirthDateAfter(color, breed, minDate);
+        }
+        if (color != null && breed != null) {
+            return petRepository.findByColorIgnoreCaseAndBreedIgnoreCase(color, breed);
+        }
+        if (color != null) {
+            return petRepository.findByColorIgnoreCase(color);
+        }
+        return petRepository.findAll();
     }
 }
